--- a/css/style.css
+++ b/css/style.css
@@ -55,14 +55,10 @@
   }
   
   .container {
-    background: radial-gradient(
-      circle at 18.7% 37.8%,
-      rgb(250, 250, 250) 0%,
-      rgb(225, 234, 238) 90%
-    );
+    background: linear-gradient(180.3deg, rgb(221, 221, 221) 5.5%, rgb(110, 136, 161) 90.2%);
     padding: 15px;
     margin: 2px auto;
-    max-width: 1000px;
+    max-width: 1050px;
     border: 1px solid grey;
     padding-top: 7px;
   }
@@ -104,4 +100,21 @@
  #Frarnight{
 
     text-decoration: none;
+ }
+ .weather-forecast{
+
+    margin-top: 20px;
+    text-align: center;
+ }
+ .forescast-date{
+
+    font-size: 16px;
+ }
+ .forecast-temp{
+    font-size: 13px;
+
+ }
+ .forescast-temp-min{
+
+    opacity: 0.6;
  }
