--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@
     background: white;
     cursor: pointer;
   }
-  .code {
+  .coder {
       text-align: center;
   }
  #all-temperature .active{
